[package]
name = "metw-api-v2"
version = "0.0.0"
edition = "2024"
description = "Version 2 metw.cc API backend"
categories = ["web-programming"]
keywords = ["api", "backend"]
readme = "./README.md"
license = "MIT"
repository = "https://github.com/metwse/metw-api-v2"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread"] }

sqlx = { version = "0.8", features = ["postgres", "bit-vec", "runtime-tokio"] }
redis = { version = "*", features = ["tokio-comp", "connection-manager"] }

serde = { version = "1", features = ["derive"] }

utoipa = { version = "5.4", features = ["axum_extras"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

lazy_static = "1.5"
dotenv = "0.15"

thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
