[package]
name = "metw-api-v2"
version = "0.1.0-rc.1"
edition = "2024"
description = "Version 2 metw.cc API backend"
categories = ["web-programming"]
keywords = ["api", "backend"]
readme = "./README.md"
license = "MIT"
repository = "https://github.com/metwse/metw-api-v2"
authors = ["Metehan Selvi <me@metehanselvi.com>"]

[dependencies]
axum = "0.8"
utoipa = { version = "5.4", features = ["axum_extras"] }
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread"] }

sqlx = { version = "0.8", features = ["postgres", "bit-vec", "runtime-tokio"] }
redis = { version = "*", features = ["tokio-comp", "connection-manager"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
hex = "0.4"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

lazy_static = "1.5"
thiserror = "2"
paste = "1"
indoc = "2"

dotenv = "0.15"

chrono = "0.4"

argon2 = "0.5"
jsonwebtoken = "9"
validator = { version = "0.20", features = ["derive"] }
regex = "1.12"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serial_test = "3"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
